# rust-i18n-strings-test

strings/: Cargo.toml  build.rs
strings/res/i18n/: en.json  fr.json
strings/src/: lib.rs  main.rs
strings_codegen/: Cargo.toml
strings_codegen/src/: lib.rs
